--- a/Resources/administration/src/app/component/base/sw-card/sw-card.less
+++ b/Resources/administration/src/app/component/base/sw-card/sw-card.less
@@ -26,6 +26,17 @@
         }
     }
 
+    &.sw-card--intro {
+        .sw-card__content{
+            background: none;
+            border: none;
+            text-align: center;
+            h3 {
+                font-size: 30px;
+            }
+        }
+    }
+
     .sw-card__title {
         margin-bottom: 12px;
         font-size: 18px;
