--- a/Resources/administration/src/app/component/form/sw-field/sw-field.less
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.less
@@ -430,6 +430,12 @@
         font-size: @sw-field-font-size;
         color: @sw-field-color-text;
         transition: @sw-field-transition;
+
+        .sw-button {
+            background: none;
+            border: none;
+            padding: unset;
+        }
     }
 
     .sw-field__help {
