NEXT-467 - Add blocks and correct typos

--- a/Resources/administration/src/app/component/base/sw-card/sw-card.less
+++ b/Resources/administration/src/app/component/base/sw-card/sw-card.less
@@ -26,7 +26,7 @@
         }
     }
 
-    &.sw-card--intro {
+    &.sw-card--hero {
         .sw-card__content{
             background: none;
             border: none;
