NEXT-467 - Add pagination

--- a/Resources/administration/src/module/sw-integration/page/sw-integration-list/sw-integration-list.html.twig
+++ b/Resources/administration/src/module/sw-integration/page/sw-integration-list/sw-integration-list.html.twig
@@ -169,6 +169,16 @@
                                                     {% endblock %}
                                                 </template>
                                             {% endblock %}
+                                            <template slot="pagination">
+                                                {% block sw_integration_list_grid_pagination %}
+                                                    <sw-pagination :offset="offset"
+                                                                   :limit="limit"
+                                                                   :total="total"
+                                                                   :total-visible="7"
+                                                                   @page-change="onPageChange">
+                                                    </sw-pagination>
+                                                {% endblock %}
+                                            </template>
                                         </sw-grid>
                                     {% endblock %}
                                 {% endblock %}
