NEXT-392 - Improve transitions and naming, change media manager icon, adjust spacing

--- a/Resources/administration/src/app/component/structure/sw-admin-menu-item/sw-admin-menu-item.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu-item/sw-admin-menu-item.html.twig
@@ -1,9 +1,9 @@
 {% block sw_admin_menu_item %}
     <li class="sw-admin-menu__navigation-list-item"
         :class="getItemName(entry.id || entry.path)"
-        @click="$emit('listItemClicked', entry, $event.currentTarget)"
-        @mouseover="$emit('menuItemChanged', entry, $event.currentTarget)"
-        @mouseleave="$emit('leaveMenuItem', entry, $event.currentTarget)">
+        @click="$emit('menuItemClicked', entry, $event.currentTarget)"
+        @mouseover="$emit('menuItemHovered', entry, $event.currentTarget)"
+        @mouseleave="$emit('menuItemMouseLeft', entry, $event.currentTarget)">
 
         {% block sw_admin_menu_item_router_link %}
             <router-link v-if="entry.path"
