--- a/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.less
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.less
@@ -69,10 +69,16 @@
 
     .sw-admin-menu__shop-status {
         position: absolute;
-        top: 6px;
+        top: 1px;
         right: 0;
-        width: 8px;
-        height: 8px;
+        width: 16px;
+        height: 16px;
+        padding: 4px;
+
+        .sw-color-badge {
+            display: block;
+            margin: 0;
+        }
     }
 
     .sw-admin-menu__header-logo {
