--- a/Resources/administration/src/app/component/structure/sw-admin-menu-item/sw-admin-menu-item.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu-item/sw-admin-menu-item.html.twig
@@ -2,8 +2,7 @@
     <li class="sw-admin-menu__navigation-list-item"
         :class="getItemName(entry.id || entry.path)"
         @click="$emit('menuItemClicked', entry, $event.currentTarget)"
-        @mouseover="$emit('menuItemHovered', entry, $event.currentTarget)"
-        @mouseleave="$emit('menuItemMouseLeft', entry, $event.currentTarget)">
+        @mouseover="$emit('menuItemHovered', entry, $event.currentTarget)">
 
         {% block sw_admin_menu_item_router_link %}
             <router-link v-if="entry.path"
@@ -51,9 +50,7 @@
         {% endblock %}
 
         {% block sw_admin_menu_item_navigation_link %}
-            <span v-else
-                  class="sw-admin-menu__navigation-link"
-                  :class="startupClass">
+            <span v-else class="sw-admin-menu__navigation-link">
                 {% block sw_admin_menu_item_icon %}
                     <sw-icon v-if="displayIcon"
                              size="20px"
